# melodex

./: .gitignore  README.md  advanced_rag.py  app.py  chat.py  config.py  eval.py  eval_app.py  ingest.py  knowledge.py  main.py  phase1_app.py  phase1_chat.py  phase1_knowledge.py  pyproject.toml  rag.py  results.md  tests.jsonl  tests.py
knowledge_base/albums/: guts.md  omg.md  phases.md  ready_to_be.md  temptation.md
knowledge_base/artists/: chase_atlantic.md  keshi.md  newjeans.md  twice.md  txt.md
vector_db/: chroma.sqlite3
