[project]
name = "melodex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
